--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,11 +2,27 @@
 <html>
 <head>
 	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-	<link rel="stylesheet" href="/css/main.css" type="text/css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+	<link rel="stylesheet" href="">
 	<title>{{ page.title }}</title>
 </head>
 <body>
-	{{ content }}
+	<div class="container">
+		<div class="row">
+			<div class="col-2">
+				<nav class="nav flex-column">
+					<a class="nav-link" href="/">Главная</a>
+					{% for doc in site.linux %}
+					<a class="nav-link" href="{{ doc.url }}">{{ doc.title }}</a>
+					{% endfor %}
+				</nav>
+			</div>
+			<div class="col-10">
+				{{ content }}
+			</div>
+		</div>
+	</div>
 </body>
 </html>
